--- a/index.org
+++ b/index.org
@@ -9,30 +9,42 @@
 #+AUTHOR:  Marie-Hélène Burle
 #+EMAIL:   msb2@sfu.ca
 
-* R best practices
+Most of us, biologists, do not learn R properly. We do not have a computing science background. Some of us /might/ have access to R courses. A really lucky few have access to R courses making use of modern packages. But for the most part, we don't. So we learn R as we go. And we become good at problem solving. But do we ever become good at solving R problems /well/?
 
-Best practices for reproducibility.
+# Having a code that works is amazing of course. But having code that is more efficient, easier to read, less prone to errors, shorter, clearer, cleaner, is better. And making a better use of R's characteristics as a coding language is even better.
 
-** Audience for the workshop
+The tutorial will start with a short introduction to best practices in R for reproducibility and readability. Both influenced by Hadley Wickham and Jenny Bryan.
 
-Low experience/intermediate R users (some basic experience in R necessary).
+I will then 
 
-** Topic covered
+* Topic covered
+
+** Part 1 (briefly): best practices in R
 
 - Self-contained projects for reproducibility
 - Formatting
 
+** Part 2: Functional programming in R (with purrr)
+
 The workshop material can be found [[https://prosoitos.github.io/International-Ornithological-Congress_r-workshops/r_best-practices.html][here]].
 
-* Functional programming in R (with purrr)
+* Audience for the workshop
 
-** Audience for the workshop
-
-Intermediate/advanced R users.
-
+- Intermediate R users comfortable with basic data manipulation, simple functions, and loops
+- Advanced users familiar with functional programming using the `apply` functions family and interested in discovering the "purrring" way.
 
 The workshop material can be found [[https://prosoitos.github.io/International-Ornithological-Congress_r-workshops/r_functional-programming.html][here]].
 
-* About myself
+/About myself
 
-I am a PhD candidate in the [[https://www.sfu.ca/biology/wildberg/NewCWEPage/CWEnewTestHome.htm][Centre for Wildlife Ecology]] at [[https://www.sfu.ca/][Simon Fraser University (SFU)]], an R peer at the [[https://www.sfu.ca/dean-gradstudies/new_graduate_students/campus_services/research-commons.html][SFU Research Commons]], a [[https://www.lib.sfu.ca/about/branches-depts/slc/slc-who/grad-facilitators/undergraduate-writing][Graduate Writing Facilitator]] at the [[https://www.lib.sfu.ca/about/branches-depts/slc][SFU Student Learning Commons]], and a certified [[https://software-carpentry.org/][Software Carpentry]] and [[http://www.datacarpentry.org/][Data Carpentry]] instructor (by workshop date).
+I am a PhD candidate in the [[https://www.sfu.ca/biology/wildberg/NewCWEPage/CWEnewTestHome.htm][Centre for Wildlife Ecology]] at [[https://www.sfu.ca/][Simon Fraser University (SFU)]], an R peer at the [[https://www.sfu.ca/dean-gradstudies/new_graduate_students/campus_services/research-commons.html][SFU Research Commons]], a [[https://www.lib.sfu.ca/about/branches-depts/slc/slc-who/grad-facilitators/undergraduate-writing][Graduate Writing Facilitator]] at the [[https://www.lib.sfu.ca/about/branches-depts/slc][SFU Student Learning Commons]], and a certified [[https://software-carpentry.org/][Software]] and [[http://www.datacarpentry.org/][Data Carpentry]] instructor./
+
+
+
+
+- import excel files directly
+- create fake data to test scripts
+- discover more of src_R[:eval no]{magrittr} than the classic pipe
+
+
+
