--- a/r_functional-programming_no-answer.org
+++ b/r_functional-programming_no-answer.org
@@ -1,5 +1,5 @@
 #+OPTIONS: title:t date:t author:t email:t
-#+OPTIONS: toc:t h:6 num:nil |:t todo:nil
+#+OPTIONS: toc:t h:6 num:t |:t todo:nil
 #+OPTIONS: *:t -:t ::t <:t \n:t e:t creator:nil
 #+OPTIONS: f:t inline:t tasks:t tex:t timestamp:t
 #+OPTIONS: html-preamble:t html-postamble:nil
@@ -15,7 +15,7 @@
 
 ** What is functional programming?
 
-It is a programming paradigm based on the evaluation of functions. This is opposed to /imperative programming/. Some languages are based strictly on functional programming (e.g. Haskell), others 
+It is a programming paradigm based on the evaluation of functions. This is opposed to /imperative  programming/. Some languages are based strictly on functional programming (e.g. Haskell), others 
 
 ** Iterations
 
@@ -70,11 +70,7 @@ and on any of its functions with:
 
 * Let's dive in
 
-** The modify functions: apply functions to indexed elements of an object
-
-Let's create some very simple data.
-
-**** Load packages
+** Load packages
 
 First, let's load the packages that we will use. It is always a good idea to write all the packages that you will be using at the top of the script. This will help others, using your script, to know what is required to run it.
 
@@ -84,7 +80,7 @@ library(magrittr)    # we will use several types of pipes
 library(patchwork)   # this is a cool package to plot several graphs together
 #+END_SRC
 
-**** Create some fake banding data
+** Create some fake banding data
 
 Let's create some imaginary bird banding data:
 
@@ -103,9 +99,35 @@ banding
 banding %>% str()
 #+END_SRC
 
-As is the case with data frames, we can see that the 3 string variables (bird, sex, and population) have been converted to factors. What if we decide to convert all those factors into character vectors. How would you do that?
+** Modify: modify elements of a list
 
-Now, this is how this can be done very easily with one of the modify function:
+As is the case with data frames, we can see that the 3 string variables (bird, sex, and population) have been converted to factors. What if we decide to convert all those factors into character vectors.
+
+*How would you do this? Spend 5 minutes writing code you would usually use.*
+
+To modify the elements of a list, you can use the modify functions family:
+
+*** Usage
+
+#+BEGIN_SRC R
+modify(.x, .f, ...)
+modify_if(.x, .p, .f, ...)
+modify_at(.x, .at, .f, ...)
+#+END_SRC
+
+#+BEGIN_EXAMPLE
+.x     a list or atomic vector
+.f     a function, formula, or atomic vector
+...    additional arguments passed to .f
+.p     a predicate function.
+       Only the elements for which .p evaluates to TRUE will be modified
+.at    a character vector of names or a numeric vector of positions.
+       Only the elements corresponding to .at will be modified
+#+END_EXAMPLE
+
+*** Apply to our example
+
+Now, this is how all factors in our data frame can be converted into character vectors using src_R[:eval no]{modify_if()}:
 
 #+BEGIN_SRC R :exports none
 banding %<>%
@@ -115,7 +137,9 @@ banding %<>%
 
 The modify family includes src_R[:eval no]{modify()}, src_R[:eval no]{modify_if()}, src_R[:eval no]{modify_at()}, and src_R[:eval no]{modify_depth}. That last one will make sense later.
 
+#+BEGIN_QUOTE
 Wait: what were all these weird looking pipes??
+#+END_QUOTE
 
 *** Magrittr digression: less used piping treasures
 
@@ -144,28 +168,103 @@ Try replacing src_R[:eval no]{%T%} with the regular pipe src_R[:eval no]{%>%} in
 
 There are other pipes in [[https://github.com/tidyverse/magrittr][this amazing package]]. You should explore them at your own time!
 
-** The map functions: apply functions to elements of a vector
+** Map: apply functions to elements of a list
+
+Now, let's imagine that we want to plot the effect of tarsus length on mass, but that we want to graph each population separately.
+
+*How would you do this? Spend 5 minutes writing code you would usually use.*
+
+To apply functions to elements of a list, you can use the src_R[:eval no]{map} functions family:
+
+*** Usage
+
+#+BEGIN_SRC R
+map(.x, .f, ...)
+map_if(.x, .p, .f, ...)
+map_at(.x, .at, .f, ...)
+#+END_SRC
+
+#+BEGIN_EXAMPLE
+.x     a list or atomic vector
+.f     a function, formula, or atomic vector
+...     additional arguments passed to .f
+.p     a predicate function.
+       Only the elements for which .p evaluates to TRUE will be modified
+.at    a character vector of names or a numeric vector of positions.
+       Only the elements corresponding to .at will be modified
+#+END_EXAMPLE
+
+*** Apply to our example
+
+This is how we can do this, using src_R[:eval no]{map()}:
 
 #+BEGIN_SRC R
 graphs <-
   banding %>%
   split(.$population) %>%
   map(~ ggplot(., aes(tarsus, mass)) + geom_point())
+#+END_SRC
 
+And using the amazingly easily package [[https://github.com/thomasp85/patchwork][patchwork]], we can plot them all side by side very easily with:
+
+#+BEGIN_SRC R
 graphs[[1]] + graphs[[2]] + graphs[[3]]
 #+END_SRC
 
-** The walk functions: apply side effects to lists
+** Walk: apply side effects to elements of a list
+
+Now that we have our 3 graphs, we want to save them to 3 files.
+
+*How would you do this? Spend 5 minutes writing code you would usually use.*
+
+To apply side effects to elements of a list, we use the src_R[:eval no]{walk} functions family:
+
+*** Usage
+
+#+BEGIN_SRC R
+walk(.x, .f, ...)
+#+END_SRC
+
+#+BEGIN_EXAMPLE
+.x     a list or atomic vector
+.f     a function, formula, or atomic vector
+...     additional arguments passed to .f
+#+END_EXAMPLE
+
+*** Apply to our example
+
+We already have a list of graphs: src_R[:eval no]{graphs}. Now, we can create a list of paths where we want to save them:
 
 #+BEGIN_SRC R
 paths <- paste0("population_", names(graphs), ".png")
+#+END_SRC
 
+So we want to save each element of src_R[:eval no]{graph} (a graph) into an element of src_R[:eval no]{paths} (a path). The function we will use is src_R[:eval no]{ggsave}. To apply it to all of our elements, instead of using src_R[:eval no]{map}, we will use src_R[:eval no]{walk} because we are not trying to create a new object.
+
+The problem is that we have 2 lists to deal with. src_R[:eval no]{Map} and src_R[:eval no]{walk} only allow to deal with one list. But src_R[:eval no]{map2} and src_R[:eval no]{walk2} allow to deal with 2 lists (src_R[:eval no]{pmap} and src_R[:eval no]{pwalk} allow to deal with any number of lists).
+
+Here is how src_R[:eval no]{walk2} works (it is the same for src_R[:eval no]{map2}):
+
+#+BEGIN_SRC R
+walk2(.x, .y, .f, ...)
+#+END_SRC
+
+#+BEGIN_EXAMPLE
+.x, .y   vectors of the same length.
+         A vector of length 1 will be recycled.
+.f       a function, formula, or atomic vector
+...       additional arguments passed to .f
+#+END_EXAMPLE
+
+*Give it a try! Try to write a function using src_R[:eval no]{walk2} that will allow us to save the elements of src_R[:eval no]{graphs} into the elements of src_R[:eval no]{paths} using src_R[:eval no]{ggsave}. Don't hesitate to look up the help file for src_R[:eval no]{ggsave} with src_R[:eval no]{?ggsave} if you don't remember how to use it!*
+
+#+BEGIN_SRC R :exports none
 walk2(paths, graphs, ggsave)
 #+END_SRC
 
 * Your turn!
 
-**** Create new fake data
+** Create new fake data
 
 This time, imagine that bird1 to bird5 are kept in captivity. Their mass is monitored regularly to make sure they are not loosing weight.
 
@@ -185,7 +284,7 @@ mass <- data.frame(
 
 But Hadley Wickham's rule is that we should never copy-paste more than twice. Uh hum... we have 5 copies of the same line of code already :P And if we wanted to create a larger data frame, we could have many more than that!
 
-If you wanted to use the src_R[:eval no]{map} function to get to the same result, how would you do this?
+*Using the src_R[:eval no]{map()} function to get to the same result, how would you do this? Spend 5 min brainstorming on this and feel free to talk to each other!*
 
 #+BEGIN_SRC R :exports none
 n_birds <- 1:15
@@ -200,19 +299,25 @@ df
 df %>% str()
 #+END_SRC
 
-**** Apply functions to each variable
+** Apply functions to each variable
 
 How could you calculate the mean for each bird?
 
-*Spend 5 min to think about this. Feel free to chat with whoever you'd like to.*
+*Spend 3 min to think about how to do this using src_R[:eval no]{map()}. Feel free to chat with whoever you'd like to.*
 
 #+BEGIN_SRC R :exports none
-map_dbl(df, mean)
+map(df, mean)
 #+END_SRC
 
-Similarly, you can calculate the variance, the sum, look for the largest value or apply any other function.
+# However, the output of src_R[:eval no]{map()} is always a list. And a list as output is not really convenient here. There are, however, other map functions which have vector or data frame outputs. To get a numeric vector as the output, we use src_R[:eval no]{map_dbl()}:
 
-*Spend 30 s to write this.*
+# #+BEGIN_SRC R
+# map_dbl(df, mean)
+# #+END_SRC
+
+Similarly, you can calculate the variance, the sum, look for the largest value, or apply any other function to our data.
+
+*Spend 2 min writing codes for these.*
 
 #+BEGIN_SRC R :exports none
 map_dbl(df, var)
@@ -220,7 +325,38 @@ map_dbl(df, sum)
 map_dbl(df, max)
 #+END_SRC
 
-** Formulas: a shorter notation for anonymous functions
+* Summary of the map functions family
+
+We will use different src_R[:eval no]{map} (or src_R[:eval no]{walk}, if we want the side effects) function depending on:
+
+** How many lists we are using in the input
+
+| number of arguments in input |   |   | purrr function    |
+|------------------------------+---+---+-------------------|
+|                            1 |   |   | =map= or =walk=   |
+|                            2 |   |   | =map2= or =walk2= |
+|                         more |   |   | =pmap= or =pwalk= |
+
+** The class of the output we want
+
+| class we want for the output   |   |   | purrr function |
+|--------------------------------+---+---+----------------|
+| list                           |   |   | =map=          |
+| double                         |   |   | =map_dbl=      |
+| integer                        |   |   | =map_int=      |
+| character                      |   |   | =map_chr=      |
+| logical                        |   |   | =map_lgl=      |
+| data frame (by row-binding)    |   |   | =map_dfr=      |
+| data frame (by column-binding) |   |   | =map_dfc=      |
+
+** How we want to select the input
+
+| selecting input based on |   |   | purrr function |
+|--------------------------+---+---+----------------|
+| condition                |   |   | =map_if=       |
+| location                 |   |   | =map_at=       |
+
+* Formulas: a shorter notation for anonymous functions
 
 With one element
 
@@ -244,19 +380,19 @@ function(x) mean(x) + 3
 ~ mean(.) + 3
 #+END_SRC
 
-With 2 elements,
+With 2 elements:
 
 #+BEGIN_SRC R
 function(x, y) x + y
 #+END_SRC
 
-can be shortened to
+can be shortened to:
 
 #+BEGIN_SRC R
 ~ .x + .y
 #+END_SRC
 
-*** Referring to elements
+** Referring to elements
 
 | 1st element |   | 2nd element |   | 3rd element |
 |-------------+---+-------------+---+-------------|
@@ -276,47 +412,14 @@ function(x1, x2, y) lm(y ~ x1 + x2)
 ~ lm(..3 ~ ..1 + ..2)
 #+END_SRC
 
-** A little summary of the family of the map functions
+* Nested data frames
 
-We will use different src_R[:eval no]{map} (or src_R[:eval no]{walk}, if we want the side effects) function depending on:
+A nested data frame is a data frame of data frames: some of the cells of this master data frame contains data frames as values. Of course, there is no limit to that and you can have data frames nested within data frames nested within data frames nested within... you get the idea. This leads to the concept of "depth".
 
-**** How many lists we are using in the input
+#+BEGIN_SRC R
 
-| number of arguments in input |   |   | purrr function    |
-|------------------------------+---+---+-------------------|
-|                            1 |   |   | =map= or =walk=   |
-|                            2 |   |   | =map2= or =walk2= |
-|                         more |   |   | =pmap= or =pwalk= |
+#+END_SRC
 
-#+HTML: <br>
-
-**** The class of the output we want
-
-| class we want for the output   |   |   | purrr function |
-|--------------------------------+---+---+----------------|
-| list                           |   |   | =map=          |
-| double                         |   |   | =map_dbl=      |
-| integer                        |   |   | =map_int=      |
-| character                      |   |   | =map_chr=      |
-| logical                        |   |   | =map_lgl=      |
-| data frame (by row-binding)    |   |   | =map_dfr=      |
-| data frame (by column-binding) |   |   | =map_dfc=      |
-
-#+HTML: <br>
-
-**** How we want to select the input
-
-| selecting input based on |   |   | purrr function |
-|--------------------------+---+---+----------------|
-| condition                |   |   | =map_if=       |
-| location                 |   |   | =map_at=       |
-
-** Nested data frames
-
-
+* Conclusion
 
 These are the most important src_R[:eval no]{purrr} functions. But there are others that you should explore :)
-
-
-
-
