--- a/index.org
+++ b/index.org
@@ -11,22 +11,22 @@
 #+AUTHOR:  Marie-Hélène Burle
 #+EMAIL:   msb2@sfu.ca
 
-Most of us, biologists, do not learn R properly: we do not have a computing science background, the lucky ones have access to R courses, and a really lucky few have access to R courses making use of modern packages. But for the most part, we learn R as we go, on our own. So we become good at problem solving. But do we ever become good at solving R problems /well/?
+Most of us biologists, do not learn R properly: we do not have a computing science background, we do not necessarily have access to R courses, and when we do, these seldom make use of modern R tools. So, for the most part, we learn R as we go, on our own. And we become good at problem solving. But do we ever become good at solving R problems /well/?
 
-Having code that works is great of course. But having code that is more efficient, easier to read, less prone to errors, shorter, clearer, cleaner, and which makes a better use of R's characteristics as a coding language, is better.
+Having code that works is great of course. But having code that is more efficient, easier to read, less prone to errors, shorter, clearer, cleaner, and which makes a better use of R's characteristics as a coding language, is certainly a whole lot better.
 
-This tutorial follows the recommendations and "views" of the src_R[:eval no]{tidyverse}, a set of modern R packages. It will start with a very short introduction to best practices in R for reproducibility and readability, then dive into the subject of functional programming with src_R[:eval no]{purrr}.
+This tutorial follows the recommendations and "views" of the src_R[:eval no]{tidyverse}, a set of modern R packages. It will start with a very short introduction to best practices in R for reproducibility and readability, then dive into the subject of functional programming using the src_R[:eval no]{tidyverse} package src_R[:eval no]{purrr}.
 
 * Topics covered
 
 ** Part 1 (very briefly): best practices in R
 
 - Self-contained projects for reproducibility (as described by [[https://github.com/jennybc][Jenny Bryan]]),
-- Formatting for better readability (as described by [[http://hadley.nz/][Hadley Wickham]]).
+- Formatting for better readability (as suggested by [[http://hadley.nz/][Hadley Wickham]]).
 
 The workshop material can be found [[https://prosoitos.github.io/International-Ornithological-Congress_r-workshops/r_best-practices.html][here]].
 
-** Part 2: Functional programming in R
+** Part 2: Functional programming in R using purrr
 
 - Introduction to functional programming,
 - How to apply functions to many elements with src_R[:eval no]{purrr} (alternative to loops),
